--- a/src/Example.css
+++ b/src/Example.css
@@ -1,82 +1,82 @@
-th{
-    background: #F4F5F7;
-    font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 12px;
-/* or 100% */
+th {
+  background: #f4f5f7;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
+  /* or 100% */
 
-/* display: flex;
+  /* display: flex;
 align-items: center; */
 
-/* Nitro Gray 600 */
+  /* Nitro Gray 600 */
 
-color: #4B5563;
+  color: #4b5563;
 }
 
-.logo{
-    border: 1px solid #F4F5F7 ;
+.logo {
+  border: 1px solid #f4f5f7;
 }
 
-td{
-font-family: Inter;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 12px;
+td {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
 }
 
-.success{
-    font-family: Helvetica Neue;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 13px;
-    background: #DEF7EC;
-    color: #03543F;
-    border-radius: 20px;
-    padding: 4px 12px;
-    }
-
-.upcoming{
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 13px;
-    background: #FEF3C7;
-    color: #92400F;
-        border-radius: 20px;
-        padding: 4px 12px;
+.success {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 13px;
+  background: #def7ec;
+  color: #03543f;
+  border-radius: 20px;
+  padding: 4px 12px;
 }
 
-.failed{
-    background: #FDE2E1;
-    font-family: Helvetica Neue;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 13px;
-    color:#981B1C;
-        border-radius: 20px;
-        padding: 4px 12px;
+.upcoming {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 13px;
+  background: #fef3c7;
+  color: #92400f;
+  border-radius: 20px;
+  padding: 4px 12px;
 }
 
-.paginate{
-    float: right;
-}
-.table-data{
-    border: 1px solid #E4E4E7;
+.failed {
+  background: #fde2e1;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 13px;
+  color: #981b1c;
+  border-radius: 20px;
+  padding: 4px 12px;
 }
 
-.pagination{
-    width: 40px;
-height: 40px;
-left: 957px;
-top: 880px;
+.paginate {
+  float: right;
+}
+.table-data {
+  border: 1px solid #e4e4e7;
+}
 
-border: 1px solid #E4E4E7;
+.pagination {
+  width: 40px;
+  height: 40px;
+  left: 957px;
+  top: 880px;
+
+  border: 1px solid #e4e4e7;
 }
 
 .dropdown {
@@ -89,7 +89,7 @@ border: 1px solid #E4E4E7;
   position: absolute;
   background-color: #ffff;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
 }
@@ -98,10 +98,10 @@ border: 1px solid #E4E4E7;
   display: block;
 }
 
-.leftBtn{
-      height: 40px;
-    border: 1px solid #e5e5e5;
-    width: 150px;
-    padding: 8px;
-    font-weight: 400;
+.leftBtn {
+  height: 40px;
+  border: 1px solid #e5e5e5;
+  width: 150px;
+  padding: 8px;
+  font-weight: 400;
 }
